Ajustando a documentação do Swagger
