# docs/swagger.yaml
@@ -36,11 +36,11 @@ info:
   title: Bootcamp Go - API
   version: "1.0"
 paths:
-  /products:
+  /products/:
     get:
       consumes:
       - application/json
-      description: get products
+      description: getAll products
       parameters:
       - description: token
         in: header
@@ -54,20 +54,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/web.Response'
-      summary: List products
+        "204":
+          description: Não há produtos cadastrados
+          schema:
+            $ref: '#/definitions/web.Response'
+      summary: List all products
       tags:
       - Products
     post:
       consumes:
       - application/json
-      description: save products
+      description: Create a new product based on the provided JSON
       parameters:
       - description: token
         in: header
         name: token
         required: true
         type: string
-      - description: Product to save
+      - description: Product to be saves
         in: body
         name: product
         required: true
@@ -76,80 +80,139 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created product
           schema:
             $ref: '#/definitions/web.Response'
-      summary: Save products
+        "400":
+          description: Missing fields error
+          schema:
+            $ref: '#/definitions/web.Response'
+        "422":
+          description: Json Parse error
+          schema:
+            $ref: '#/definitions/web.Response'
+        "500":
+          description: Internal Server error
+          schema:
+            $ref: '#/definitions/web.Response'
+      summary: Save new products
       tags:
       - Products
-  /products/:id:
+  /products/{id}:
     delete:
-      consumes:
-      - application/json
-      description: Delete a products based on id
+      description: Delete a specific product based on ID
       parameters:
       - description: token
         in: header
         name: token
         required: true
         type: string
-      produces:
-      - application/json
-      responses: {}
-      summary: Delete a product
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No content
+          schema:
+            $ref: '#/definitions/web.Response'
+        "400":
+          description: ID validation error
+          schema:
+            $ref: '#/definitions/web.Response'
+        "404":
+          description: Product not found
+          schema:
+            $ref: '#/definitions/web.Response'
+      summary: Delete a product based on OD
       tags:
       - Products
     patch:
       consumes:
       - application/json
-      description: Update Name and Price of a product based on id
+      description: Update a specific product based on the provided JSON
       parameters:
       - description: token
         in: header
         name: token
         required: true
         type: string
-      - description: Product name and price to update
+      - description: Product to be updated
         in: body
         name: product
         required: true
         schema:
           $ref: '#/definitions/handler.request'
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Product Updated
           schema:
             $ref: '#/definitions/web.Response'
-      summary: Update Name and Price of a product
+        "400":
+          description: ID validation error or missing fields
+          schema:
+            $ref: '#/definitions/web.Response'
+        "404":
+          description: Product ID not found
+          schema:
+            $ref: '#/definitions/web.Response'
+        "422":
+          description: Json Parse error
+          schema:
+            $ref: '#/definitions/web.Response'
+      summary: Update a product`s name and price based on ID
       tags:
       - Products
     put:
       consumes:
       - application/json
-      description: Updates products based on id
+      description: Update a specific product based on the provided JSON
       parameters:
       - description: token
         in: header
         name: token
         required: true
         type: string
-      - description: Product to update
+      - description: Product to be updated
         in: body
         name: product
         required: true
         schema:
           $ref: '#/definitions/handler.request'
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Product Updated
           schema:
             $ref: '#/definitions/web.Response'
-      summary: Update product
+        "400":
+          description: ID validation error or missing fields
+          schema:
+            $ref: '#/definitions/web.Response'
+        "404":
+          description: Product ID not found
+          schema:
+            $ref: '#/definitions/web.Response'
+        "422":
+          description: Json Parse error
+          schema:
+            $ref: '#/definitions/web.Response'
+      summary: Update a product based on ID
       tags:
       - Products
 swagger: "2.0"
